5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1822_1641.log
== TEST (2019-06-13 10:06:49) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(x)):
	b = b + v[i] / 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:07:03) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(x)):
	b = b + v[i] / 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:07:20) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] / 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:07:48) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b =  v[i] / 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:08:08) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b =  v[i] // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:08:08) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b =  v[i] // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:08:08) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b =  v[i] // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:08:08) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b =  v[i] // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:08:16) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:08:36) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b =  v[i] // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:09:06) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for y in range(size(v)):
	b =  y // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:09:30) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for y in range(size(v)):
	b =  v[y] // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:09:50) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for y in (v):
	b =  v[y] // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:10:16) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for y in (v):
	b =  v[y] // 3 + b
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:14) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	b = b + 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:28) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	b = b + 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:43) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:59) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:38) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:58) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:58) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:58) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:58) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:58) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:58) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:58) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = b + v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:13:39) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:14:47) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = v[i] % 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:15:35) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = v[i] // 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:05) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] // 3) % 3
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] // 3) % 3
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:48) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] / 3) %3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:08) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] / 3) %3
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:25) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] / 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:29) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
v = zeros(1,)
for i in range(size(v)):
	b = (v[i] / 3) 
	v = b
	print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:45) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
v = zeros(1,)
for i in range(size(v)):
	b = (v[i] / 3) 
v = b
	print(v)
-- ERROR:
File "XXXX", line 8
    print(v)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:52) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
v = zeros(1,)
for i in range(size(v)):
	b = (v[i] / 3) 
v = b
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:33) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
x = zeros(1, dtyoe=int)
for i in range(size(v)):
	x = (v[i] / 3) 
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:47) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
x = zeros(1, dtype=int)
for i in range(size(v)):
	x = (v[i] / 3) 
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:20:31) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
x = zeros(1, dtype=int)
for i in range(size(v)):
	x = (v[i] / 3) 
	x = x + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:13) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
x = zeros(1, dtype=int)
for i in range(size(v)):
	x[i] = (v[i] / 3) 

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:35) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
x = zeros(1, dtype=int)
for i in range(size(v)):
	x[i] = (v[i] / 3) 
	x = x + 1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:57) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
x = zeros(1, dtype=int)
for i in range(size(v)):
	x = (v[i] / 3) 
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:03) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
x = zeros(1, dtype=int)
for i in range(size(v)):
	x = (v[i] / 3) 
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:47) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
x = zeros(1, dtype=int)
for i in range(size(v)):
	x = (v[i] / 3) 
	print(x = zeros(1, dtype=int))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:07) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] // 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:54) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i]  3) 
	print(b)
-- ERROR:
File "XXXX", line 5
    b = (v[i]  3) 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:56) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i]  3) 
	print(b)
-- ERROR:
File "XXXX", line 5
    b = (v[i]  3) 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:27:58) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i]  3) 
	print(b)
-- ERROR:
File "XXXX", line 5
    b = (v[i]  3) 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:03) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:06) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:12) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:17) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:19) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:28:25) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- EXECUTION TIME:
0.933475
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
4
[5 7 8 9]
---- user output:
1
2
1
1
1
0
2
0
0
0
1
1
2
-- TEST CASE 2:
---- input:
[15,20,30,15,36,63,25,10,2]
---- correct output:
5
[0 2 3 4 5]
---- user output:
0
2
0
0
0
0
1
1
2
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[3 4 5]
---- user output:
1
2
1
0
0
0
2
1
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:26) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:28:36) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- EXECUTION TIME:
1.27973
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
4
[5 7 8 9]
---- user output:
1
2
1
1
1
0
2
0
0
0
1
1
2
-- TEST CASE 2:
---- input:
[15,20,30,15,36,63,25,10,2]
---- correct output:
5
[0 2 3 4 5]
---- user output:
0
2
0
0
0
0
1
1
2
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[3 4 5]
---- user output:
1
2
1
0
0
0
2
1
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:37) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:53) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:51) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:55) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:30:01) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:30:07) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:30:13) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:33) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:37) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:39) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:42) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:44) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:31:49) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:32:32) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] % 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:32:48) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] // 3) 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:34:49) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] // 3) % 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:35:07) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] // 3) % 3 
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:36:07) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)):
	b = (v[i] // 3) % 3 = 0
	print(b)
-- ERROR:
File "XXXX", line 5
    b = (v[i] // 3) % 3 = 0
       ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:36:56) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	b = v[i]//3
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:33) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = zeros(1, dtype=int)
for i in range(size(v)): 
	b = v[i]//3
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:12) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
for i in range(size(v)): 
	b = v[i]//3
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:18) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
for i in range(size(v)): 
	b = v[i]/3
	print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:56) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
for i in range(size(v)): 
	b = ((v[i]//3) % = 0) 
	print(b)
-- ERROR:
File "XXXX", line 4
    b = ((v[i]//3) % = 0) 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:01) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
for i in range(size(v)): 
	b = ((v[i]//3) % == 0) 
	print(b)
-- ERROR:
File "XXXX", line 4
    b = ((v[i]//3) % == 0) 
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:24) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
for i in range(size(v)): 
	b = ((v[i]//3)) 
b = b + 1
	print(b)
-- ERROR:
File "XXXX", line 6
    print(b)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:30) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
for i in range(size(v)): 
	b = ((v[i]//3)) 
b = b + 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:48) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
for i in range(size(v)): 
	b = ((v[i]//3)) 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:40) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
for i in range(size(v)): 
	b = ((v[i]//3))
v = b % 3
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:41) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
	print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:50:00) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:38) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
print(b)

x = zeros(b, dtype=int)

for i in range(size(v)):
	if v[i]%3 == 0:
		b[i] = b[i] + 1
print(b)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:54:22) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
print(b)

x = zeros(b, dtype=int)

for i in range(size(v)):
	if v[i]%3 == 0:
		x[i] = x[i] + 1  
print(x)
	
-- EXECUTION TIME:
0.912293
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1822/1641/main.py", line 13, in <module>
    x[i] = x[i] + 1  
IndexError: index 5 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:24) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
print(b)

x = zeros(b, dtype=int)

for i in range(size(v)):
	if v[i]%3 == 0:
		x[i] = x[i] + 1  
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:54:46) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
print(b)

x = zeros(b, dtype=int)

for i in range(size(v)):
	if v[i]%3 == 0:
		x[i] = v[i] + 1  
print(x)
	
-- EXECUTION TIME:
1.21122
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1822/1641/main.py", line 13, in <module>
    x[i] = v[i] + 1  
IndexError: index 5 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:54:50) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
print(b)

x = zeros(b, dtype=int)

for i in range(size(v)):
	if v[i]%3 == 0:
		x[i] = v[i] + 1  
print(x)
	
-- EXECUTION TIME:
1.07223
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1822/1641/main.py", line 13, in <module>
    x[i] = v[i] + 1  
IndexError: index 5 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-07 23:59:39) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
print(b)

x = zeros(b, dtype=int)

for i in range(size(v)):
	if v[i]%3 == 0:
		x[i] = v[i] + 1  
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-07 23:59:50) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
print(b)

x = zeros(b, dtype=int)

for i in range(size(v)):
	if v[i]%3 == 0:
		x[i] = v[i] + 1  
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-08 00:00:35) 
-- CODE:
from numpy import *
v = array(eval(input("v: ")))
b = 0
for i in range(size(v)): 
	if v[i]%3 == 0:
		b = b + 1
print(b)

x = zeros(b, dtype=int)

for i in range(size(v)):
	if v[i]%3 == 0:
		x[i] = v[i] + 1  
print(x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
